--- a/parent/feutrainer-assembly/src/main/resources/config/application.properties
+++ b/parent/feutrainer-assembly/src/main/resources/config/application.properties
@@ -2,5 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost/feutrainer
 spring.datasource.username=feutrainer
 spring.datasource.password=feutrainer
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 server.port=80
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=false
