Rework to MTable.

--- a/parent/feutrainer-assembly/pom.xml
+++ b/parent/feutrainer-assembly/pom.xml
@@ -40,8 +40,8 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		
 	</dependencies>
-
 
 	<build>
 		<plugins>
@@ -76,14 +76,26 @@
 					<finalName>feutrainer</finalName>
 					<layout>WAR</layout>
 				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
+			<plugin>
+	        <groupId>com.vaadin</groupId>
+	        <artifactId>vaadin-maven-plugin</artifactId>
+	        <version>${vaadin.version}</version>
+	        <configuration>
+		        <strict>true</strict>
+		        <force>true</force>
+		        <!-- Enable during development to speed compiling. --> 
+		        <!-- <draftCompile>true</draftCompile>
+		        <style>DETAILED</style> -->
+		        <!--<userAgents>ie8</userAgents>--> 
+		        <!-- <userAgents>gecko1_8</userAgents> -->
+		        <!-- End development options -->
+		        <webappDirectory>src/main/webapp/VAADIN/widgetsets</webappDirectory>
+		        <modules>
+		        	<module>de.zettsystems.FeuTrainerWidgetSet</module>            
+		        </modules>
+		        </configuration>
+	      </plugin>
 		</plugins>
 	</build>
 </project>
