--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -12,12 +12,12 @@
 		<java.target>1.8</java.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.resourcesEncoding>UTF-8</project.build.resourcesEncoding>
-		<spring.boot.version>1.3.0.M5</spring.boot.version>
+		<spring.boot.version>1.3.0.RC1</spring.boot.version>
 		<guava.version>18.0</guava.version>
 		<vaadin.version>7.5.7</vaadin.version>
 		<vaadin.springboot.version>1.0.0</vaadin.springboot.version>
 		<usertype.extended.version>4.0.0.GA</usertype.extended.version>
-		<spring.version>4.2.1.RELEASE</spring.version>
+		<spring.version>4.2.2.RELEASE</spring.version>
 		<mysql.version>5.1.36</mysql.version>
 		<hibernate-jpamodelgen.version>5.0.0.Final</hibernate-jpamodelgen.version>
 		<maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
