--- a/parent/ui/pom.xml
+++ b/parent/ui/pom.xml
@@ -36,17 +36,58 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 		</dependency>
+		<!--  
 		<dependency>
-		   <groupId>com.vaadin.addon</groupId>
-		   <artifactId>jpacontainer</artifactId>
-		   <version>3.2.0</version>			   
-		   <scope>system</scope>
-      	   <systemPath>C:/Development/libraries/vaadin-jpacontainer-3.2.0.jar</systemPath>
+		   <groupId>org.vaadin</groupId>
+		   <artifactId>viritin</artifactId>
+		   <version>1.37</version>
 		</dependency>
 		<dependency>
-			<groupId>org.scala-lang</groupId>
-			<artifactId>scala-library</artifactId>
-			<version>2.11.0</version>
+		   <groupId>org.vaadin.teemu</groupId>
+		   <artifactId>switch</artifactId>
+		   <version>2.0.3</version>
+		</dependency>
+		-->
+		<dependency>
+		   <groupId>com.vaadin</groupId>
+		   <artifactId>viritin</artifactId>
+		   <version>1.37</version>			   
+		   <scope>system</scope>
+      	   <systemPath>C:/Development/libraries/viritin/viritin-1.37.jar</systemPath>
+		</dependency>
+		
+        <dependency>
+            <groupId>org.vaadin.addon</groupId>
+            <artifactId>confirmdialog</artifactId>
+            <version>2.1.3</version>			   
+		   <scope>system</scope>
+           <systemPath>C:/Development/libraries/confirmdialog/confirmdialog-2.1.3.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.commonjava.googlecode.markdown4j</groupId>
+            <artifactId>markdown4j</artifactId>
+            <version>2.2-cj-1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+		<dependency>
+		   <groupId>org.vaadin.teemu</groupId>
+		   <artifactId>switch</artifactId>
+		   <version>2.0.3</version>		   		   
+		   <scope>system</scope>
+      	   <systemPath>C:\Development\libraries\switch/switch-2.0.3.jar</systemPath>
 		</dependency>
 	</dependencies>
 </project>
