--- a/parent/feutrainer-assembly/pom.xml
+++ b/parent/feutrainer-assembly/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>de.zettsystems.feutrainer</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>feutrainer-assembly</artifactId>
@@ -16,7 +16,7 @@
 	</prerequisites>
 
 	<description>
-		Assembly for feu trainer.
+		FeU training service.
   </description>
 
 	<dependencies>
@@ -44,6 +44,13 @@
 	</dependencies>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+		<finalName>feutrainer</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -74,6 +81,7 @@
 					<encoding>${project.build.sourceEncoding}</encoding>
 					<mainClass>de.zettsystems.FeuTrainer</mainClass>
 					<finalName>feutrainer</finalName>
+					<executable>true</executable>
 					<layout>WAR</layout>
 				</configuration>
 			</plugin>
