--- a/parent/feutrainer-assembly/src/main/resources/config/application.properties
+++ b/parent/feutrainer-assembly/src/main/resources/config/application.properties
@@ -9,3 +9,4 @@ spring.jpa.show-sql=false
 
 server.port=80
 server.jsp-servlet.init-parameters.widgetset=de.zettsystems.FeuTrainerWidgetSet
+vaadin.servlet.productionMode=true
