--- a/parent/ui/pom.xml
+++ b/parent/ui/pom.xml
@@ -11,6 +11,13 @@
 	
 	<properties>
 	</properties>
+	<repositories>
+		<repository>
+		   <id>vaadin-addons</id>
+		   <url>http://maven.vaadin.com/vaadin-addons</url>
+		</repository>
+		
+	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -36,7 +43,6 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 		</dependency>
-		<!--  
 		<dependency>
 		   <groupId>org.vaadin</groupId>
 		   <artifactId>viritin</artifactId>
@@ -47,21 +53,11 @@
 		   <artifactId>switch</artifactId>
 		   <version>2.0.3</version>
 		</dependency>
-		-->
-		<dependency>
-		   <groupId>com.vaadin</groupId>
-		   <artifactId>viritin</artifactId>
-		   <version>1.37</version>			   
-		   <scope>system</scope>
-      	   <systemPath>C:/Development/libraries/viritin/viritin-1.37.jar</systemPath>
-		</dependency>
 		
-        <dependency>
+		<dependency>
             <groupId>org.vaadin.addon</groupId>
             <artifactId>confirmdialog</artifactId>
-            <version>2.1.3</version>			   
-		   <scope>system</scope>
-           <systemPath>C:/Development/libraries/confirmdialog/confirmdialog-2.1.3.jar</systemPath>
+            <version>2.1.3</version>
         </dependency>
         <dependency>
             <groupId>org.commonjava.googlecode.markdown4j</groupId>
@@ -82,12 +78,5 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.3.2</version>
         </dependency>
-		<dependency>
-		   <groupId>org.vaadin.teemu</groupId>
-		   <artifactId>switch</artifactId>
-		   <version>2.0.3</version>		   		   
-		   <scope>system</scope>
-      	   <systemPath>C:\Development\libraries\switch/switch-2.0.3.jar</systemPath>
-		</dependency>
 	</dependencies>
 </project>
