--- a/parent/domain/.settings/.gitignore
+++ b/parent/domain/.settings/.gitignore
@@ -5,3 +5,4 @@
 /org.eclipse.wst.common.project.facet.core.xml
 /org.eclipse.wst.validation.prefs
 /org.sonar.ide.eclipse.core.prefs
+/org.eclipse.jdt.apt.core.prefs
