--- a/parent/feutrainer-assembly/.settings/.gitignore
+++ b/parent/feutrainer-assembly/.settings/.gitignore
@@ -8,3 +8,4 @@
 /org.eclipse.wst.jsdt.ui.superType.name
 /org.eclipse.wst.validation.prefs
 /org.sonar.ide.eclipse.core.prefs
+/org.eclipse.jdt.apt.core.prefs
