--- a/parent/tools/.settings/.gitignore
+++ b/parent/tools/.settings/.gitignore
@@ -3,3 +3,4 @@
 /org.eclipse.m2e.core.prefs
 /org.eclipse.wst.common.project.facet.core.xml
 /org.sonar.ide.eclipse.core.prefs
+/org.eclipse.jdt.apt.core.prefs
