--- a/parent/ui/pom.xml
+++ b/parent/ui/pom.xml
@@ -74,6 +74,11 @@
 		   <artifactId>switch</artifactId>
 		   <version>2.0.3</version>
 		</dependency>
+		<dependency>
+		   <groupId>org.vaadin.addons</groupId>
+		   <artifactId>filteringtable</artifactId>
+		   <version>0.9.13.v7</version>
+		</dependency>
 		
 		<dependency>
             <groupId>org.vaadin.addon</groupId>
