--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -12,7 +12,7 @@
 		<java.target>1.8</java.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.resourcesEncoding>UTF-8</project.build.resourcesEncoding>
-		<spring.boot.version>1.3.0.RC1</spring.boot.version>
+		<spring.boot.version>1.3.0.RELEASE</spring.boot.version>
 		<guava.version>18.0</guava.version>
 		<vaadin.version>7.5.8</vaadin.version>
 		<vaadin.springboot.version>1.0.0</vaadin.springboot.version>
@@ -25,7 +25,6 @@
 		<maven.jar.plugin.version>2.6</maven.jar.plugin.version>
 		<maven.processor.plugin.version>2.2.4</maven.processor.plugin.version>
 		<hibernateValidator.version>5.0.1.Final</hibernateValidator.version>
-		<validation.api.version>1.1.0.Final</validation.api.version>
 	</properties>
 
 	<dependencyManagement>
@@ -54,6 +53,11 @@
 				<version>${spring.boot.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot_starter-validation</artifactId>
+				<version>${spring.boot.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.jadira.usertype</groupId>
 				<artifactId>usertype.extended</artifactId>
 				<version>${usertype.extended.version}</version>
@@ -63,12 +67,6 @@
 				<artifactId>hibernate-validator</artifactId>
 				<version>${hibernateValidator.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>javax.validation</groupId>
-				<artifactId>validation-api</artifactId>
-				<version>${validation.api.version}</version>
-			</dependency>
-
 			<dependency>
 				<groupId>com.vaadin</groupId>
 				<artifactId>vaadin-bom</artifactId>
