--- a/parent/domain/pom.xml
+++ b/parent/domain/pom.xml
@@ -62,7 +62,7 @@
 					<dependency>
 						<groupId>org.hibernate</groupId>
 						<artifactId>hibernate-jpamodelgen</artifactId>
-						<version>${hibernate-jpamodelgen.version}</version>
+						<version>${hibernate.version}</version>
 					</dependency>
 				</dependencies>
 			</plugin>
