--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -12,18 +12,18 @@
 		<java.target>1.8</java.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.resourcesEncoding>UTF-8</project.build.resourcesEncoding>
-		<spring.boot.version>1.3.0.RELEASE</spring.boot.version>
+		<spring.boot.version>1.3.1.RELEASE</spring.boot.version>
 		<guava.version>19.0</guava.version>
-		<vaadin.version>7.5.10</vaadin.version>
+		<vaadin.version>7.6.0</vaadin.version>
 		<vaadin.springboot.version>1.0.0</vaadin.springboot.version>
 		<usertype.extended.version>5.0.0.GA</usertype.extended.version>
-		<mysql.version>5.1.38</mysql.version>
-		<hibernate-jpamodelgen.version>5.0.0.Final</hibernate-jpamodelgen.version>
 		<maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
 		<maven.war.plugin.version>2.6</maven.war.plugin.version>
 		<maven.jar.plugin.version>2.6</maven.jar.plugin.version>
 		<maven.processor.plugin.version>2.2.4</maven.processor.plugin.version>
-		<hibernateValidator.version>5.0.1.Final</hibernateValidator.version>
+		
+		<!-- Properties in BOMs don't get transfered.  -->
+		<hibernate.version>4.3.11.Final</hibernate.version>
 	</properties>
 
 	<dependencyManagement>
@@ -62,11 +62,6 @@
 				<version>${usertype.extended.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.hibernate</groupId>
-				<artifactId>hibernate-validator</artifactId>
-				<version>${hibernateValidator.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>com.vaadin</groupId>
 				<artifactId>vaadin-bom</artifactId>
 				<version>${vaadin.version}</version>
@@ -82,12 +77,6 @@
 				<groupId>com.vaadin</groupId>
 				<artifactId>vaadin-spring-boot-starter</artifactId>
 				<version>${vaadin.springboot.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>mysql</groupId>
-				<artifactId>mysql-connector-java</artifactId>
-				<version>${mysql.version}</version>
 			</dependency>
 
 			<dependency>
