--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>de.zettsystems.feutrainer</groupId>
 	<artifactId>parent</artifactId>
-	<version>0.3.0-SNAPSHOT</version>
+	<version>0.4.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<properties>
@@ -14,7 +14,8 @@
 		<project.build.resourcesEncoding>UTF-8</project.build.resourcesEncoding>
 		<spring.boot.version>1.3.2.RELEASE</spring.boot.version>
 		<guava.version>19.0</guava.version>
-		<vaadin.version>7.6.1</vaadin.version>
+		<vaadin.version>7.6.2</vaadin.version>
+		<commons.io.version>2.4</commons.io.version>
 		<vaadin.springboot.version>1.0.0</vaadin.springboot.version>
 		<usertype.extended.version>5.0.0.GA</usertype.extended.version>
 		<maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
@@ -44,6 +45,11 @@
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
 				<version>${guava.version}</version>
+			</dependency>			
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>${commons.io.version}</version>
 			</dependency>
 
 			<dependency>
