--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -12,9 +12,9 @@
 		<java.target>1.8</java.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.resourcesEncoding>UTF-8</project.build.resourcesEncoding>
-		<spring.boot.version>1.3.3.RELEASE</spring.boot.version>
+		<spring.boot.version>1.4.0.M1</spring.boot.version>
 		<guava.version>19.0</guava.version>
-		<vaadin.version>7.6.3</vaadin.version>
+		<vaadin.version>7.6.4</vaadin.version>
 		<commons.io.version>2.4</commons.io.version>
 		<vaadin.springboot.version>1.0.0</vaadin.springboot.version>
 		<usertype.extended.version>5.0.0.GA</usertype.extended.version>
