--- a/parent/ui/pom.xml
+++ b/parent/ui/pom.xml
@@ -45,22 +45,22 @@
         <dependency>
             <groupId>org.vaadin.spring.extensions</groupId>
             <artifactId>vaadin-spring-ext-core</artifactId>            
-			<version>0.0.7-SNAPSHOT</version>
+			<version>0.0.7.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.vaadin.spring.extensions</groupId>
             <artifactId>vaadin-spring-ext-boot</artifactId>            
-			<version>0.0.7-SNAPSHOT</version>
+			<version>0.0.7.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.vaadin.spring.extensions</groupId>
             <artifactId>vaadin-spring-ext-security</artifactId>
-			<version>0.0.7-SNAPSHOT</version>
+			<version>0.0.7.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.vaadin.spring.addons</groupId>
             <artifactId>vaadin-spring-addon-sidebar</artifactId>
-            <version>0.0.7-SNAPSHOT</version>
+            <version>0.0.7.RELEASE</version>
         </dependency>
         		
 		<dependency>
@@ -70,7 +70,7 @@
 		<dependency>
 		   <groupId>org.vaadin</groupId>
 		   <artifactId>viritin</artifactId>
-		   <version>1.37</version>
+		   <version>1.47</version>
 		</dependency>
 		<dependency>
 		   <groupId>org.vaadin.teemu</groupId>
@@ -80,7 +80,7 @@
 		<dependency>
 		   <groupId>org.vaadin.addons</groupId>
 		   <artifactId>filteringtable</artifactId>
-		   <version>0.9.13.v7</version>
+		   <version>0.9.15.v7</version>
 		</dependency>
 		
 		<dependency>
@@ -91,7 +91,7 @@
         <dependency>
             <groupId>org.commonjava.googlecode.markdown4j</groupId>
             <artifactId>markdown4j</artifactId>
-            <version>2.2-cj-1.0</version>
+            <version>2.2-cj-1.1</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
