--- a/parent/domain/pom.xml
+++ b/parent/domain/pom.xml
@@ -10,14 +10,15 @@
 	<artifactId>domain</artifactId>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-validation</artifactId>
+	<dependency>
+			<groupId>de.zettsystems.feutrainer</groupId>
+			<artifactId>values</artifactId>
+			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-data-jpa</artifactId>
+			</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
