--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -8,8 +8,7 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<java.source>1.8</java.source>
-		<java.target>1.8</java.target>
+		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.resourcesEncoding>UTF-8</project.build.resourcesEncoding>
 		<spring.boot.version>1.4.0.M1</spring.boot.version>
@@ -17,13 +16,15 @@
 		<vaadin.version>7.6.4</vaadin.version>
 		<commons.io.version>2.4</commons.io.version>
 		<vaadin.springboot.version>1.0.0</vaadin.springboot.version>
+		<vaadin.spring.extension.version>0.0.7.RELEASE</vaadin.spring.extension.version>
+		<viritin.version>1.49</viritin.version>
 		<usertype.extended.version>5.0.0.GA</usertype.extended.version>
 		<maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
 		<maven.war.plugin.version>2.6</maven.war.plugin.version>
 		<maven.jar.plugin.version>2.6</maven.jar.plugin.version>
 		<maven.processor.plugin.version>2.2.4</maven.processor.plugin.version>
-		
-		<!-- Properties in BOMs don't get transfered.  -->
+
+		<!-- Properties in BOMs don't get transfered. -->
 		<hibernate.version>4.3.11.Final</hibernate.version>
 	</properties>
 
@@ -45,7 +46,7 @@
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
 				<version>${guava.version}</version>
-			</dependency>			
+			</dependency>
 			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
@@ -83,6 +84,56 @@
 				<artifactId>vaadin-spring-boot-starter</artifactId>
 				<version>${vaadin.springboot.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.vaadin.spring.extensions</groupId>
+				<artifactId>vaadin-spring-ext-core</artifactId>
+				<version>${vaadin.spring.extension.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.vaadin.spring.extensions</groupId>
+				<artifactId>vaadin-spring-ext-boot</artifactId>
+				<version>${vaadin.spring.extension.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.vaadin.spring.extensions</groupId>
+				<artifactId>vaadin-spring-ext-security</artifactId>
+				<version>${vaadin.spring.extension.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.vaadin.spring.addons</groupId>
+				<artifactId>vaadin-spring-addon-sidebar</artifactId>
+				<version>${vaadin.spring.extension.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.vaadin</groupId>
+				<artifactId>viritin</artifactId>
+				<version>${viritin.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.vaadin.teemu</groupId>
+				<artifactId>switch</artifactId>
+				<version>2.0.3</version>
+			</dependency>
+			<dependency>
+				<groupId>org.vaadin.addons</groupId>
+				<artifactId>filteringtable</artifactId>
+				<version>0.9.15.v7</version>
+			</dependency>
+			<dependency>
+				<groupId>org.vaadin.addon</groupId>
+				<artifactId>confirmdialog</artifactId>
+				<version>2.1.3</version>
+			</dependency>
+			<dependency>
+				<groupId>org.commonjava.googlecode.markdown4j</groupId>
+				<artifactId>markdown4j</artifactId>
+				<version>2.2-cj-1.1</version>
+			</dependency>
+			<dependency>
+	            <groupId>org.apache.commons</groupId>
+	            <artifactId>commons-lang3</artifactId>
+	            <version>3.4</version>
+	        </dependency>
 
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
@@ -108,8 +159,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven.compiler.plugin.version}</version>
 				<configuration>
-					<source>${java.source}</source>
-					<target>${java.target}</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 					<encoding>${project.build.sourceEncoding}</encoding>
 					<debug>true</debug>
 					<useIncrementalCompilation>false</useIncrementalCompilation>
