--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -11,20 +11,26 @@
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.resourcesEncoding>UTF-8</project.build.resourcesEncoding>
-		<spring.boot.version>1.4.0.M3</spring.boot.version>
+		<spring.boot.version>1.4.0.RELEASE</spring.boot.version>
 		<guava.version>19.0</guava.version>
 		<vaadin.version>7.6.7</vaadin.version>
 		<commons.io.version>2.5</commons.io.version>
 		<vaadin.springboot.version>1.0.0</vaadin.springboot.version>
 		<vaadin.spring.extension.version>0.0.7.RELEASE</vaadin.spring.extension.version>
-		<viritin.version>1.53</viritin.version>
+		<viritin.version>1.54</viritin.version>
+		<commons-lang3.version>3.4</commons-lang3.version>
+		<markdown4j.version>2.2-cj-1.1</markdown4j.version>
+		<confirmdialog.version>2.1.3</confirmdialog.version>
+		<filteringtable.version>0.9.15.v7</filteringtable.version>
+		<switch.version>2.0.3</switch.version>
+		
 		<maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
 		<maven.war.plugin.version>2.6</maven.war.plugin.version>
 		<maven.jar.plugin.version>2.6</maven.jar.plugin.version>
 		<maven.processor.plugin.version>2.2.4</maven.processor.plugin.version>
 
 		<!-- Properties in BOMs don't get transfered. -->
-		<hibernate.version>5.2.1.Final</hibernate.version>
+		<hibernate.version>5.0.9.Final</hibernate.version>
 	</properties>
 
 	<dependencyManagement>
@@ -111,27 +117,27 @@
 			<dependency>
 				<groupId>org.vaadin.teemu</groupId>
 				<artifactId>switch</artifactId>
-				<version>2.0.3</version>
+				<version>${switch.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.vaadin.addons</groupId>
 				<artifactId>filteringtable</artifactId>
-				<version>0.9.15.v7</version>
+				<version>${filteringtable.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.vaadin.addon</groupId>
 				<artifactId>confirmdialog</artifactId>
-				<version>2.1.3</version>
+				<version>${confirmdialog.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.commonjava.googlecode.markdown4j</groupId>
 				<artifactId>markdown4j</artifactId>
-				<version>2.2-cj-1.1</version>
+				<version>${markdown4j.version}</version>
 			</dependency>
 			<dependency>
 	            <groupId>org.apache.commons</groupId>
 	            <artifactId>commons-lang3</artifactId>
-	            <version>3.4</version>
+	            <version>${commons-lang3.version}</version>
 	        </dependency>
 
 			<dependency>
@@ -144,6 +150,7 @@
 	</dependencyManagement>
 
 	<modules>
+		<module>values</module>
 		<module>domain</module>
 		<module>application</module>
 		<module>ui</module>
@@ -189,6 +196,16 @@
 		<repository>
 			<id>vaadin-addons</id>
 			<url>http://maven.vaadin.com/vaadin-addons</url>
+		</repository>
+		<repository>
+		    <id>spring-repo</id>
+		    <name>Spring Repository</name>
+		    <url>https://repo.spring.io/release</url>
+		</repository>
+		<repository>
+		    <id>spring-milestone</id>
+		    <name>Spring Milestone Repository</name>
+		    <url>https://repo.spring.io/milestone</url>
 		</repository>
 	</repositories>
 </project>
