--- a/parent/feutrainer-assembly/src/main/resources/config/application.yaml
+++ b/parent/feutrainer-assembly/src/main/resources/config/application.yaml
@@ -1,18 +1,23 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost/feutrainer
+    type: com.zaxxer.hikari.HikariDataSource
+    continueOnError: true
+    url: jdbc:mysql://localhost/feu
     username: feutrainer
     password: feutrainer
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.jdbc.Driver    
 
   jpa: 
     hibernate:
-      ddl-auto: none
+      use-new-id-generator-mappings: true
+      ddl-auto: update
     database-platform: org.hibernate.dialect.MySQLDialect
     show-sql: false
 
 server:
   port: 8080
+  compression:
+    enabled: true
   jsp-servlet:
     init-parameters:
       widgetset: de.zettsystems.FeuTrainerWidgetSet
