--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -4,25 +4,26 @@
 
 	<groupId>de.zettsystems.feutrainer</groupId>
 	<artifactId>parent</artifactId>
-	<version>0.4.0-SNAPSHOT</version>
+	<version>0.4.0</version>
 	<packaging>pom</packaging>
 
 	<properties>
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.resourcesEncoding>UTF-8</project.build.resourcesEncoding>
-		<spring.boot.version>1.4.1.RELEASE</spring.boot.version>
+		<spring.boot.version>1.4.2.RELEASE</spring.boot.version>
 		<guava.version>20.0</guava.version>
-		<vaadin.version>7.7.3</vaadin.version>
+		<vaadin.version>7.7.6</vaadin.version>
 		<commons.io.version>2.5</commons.io.version>
-		<vaadin.springboot.version>1.0.2</vaadin.springboot.version>
+		<vaadin.springboot.version>1.1.1</vaadin.springboot.version>
 		<vaadin.spring.extension.version>0.0.7.RELEASE</vaadin.spring.extension.version>
 		<viritin.version>1.58</viritin.version>
-		<commons-lang3.version>3.4</commons-lang3.version>
+		<commons-lang3.version>3.5</commons-lang3.version>
 		<markdown4j.version>2.2-cj-1.1</markdown4j.version>
 		<confirmdialog.version>2.1.3</confirmdialog.version>
 		<filteringtable.version>0.9.15.v7</filteringtable.version>
 		<switch.version>2.0.3</switch.version>
+		<bean.validation.version>1.1.0.Final</bean.validation.version>
 		
 		<maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
 		<maven.war.plugin.version>2.6</maven.war.plugin.version>
@@ -41,11 +42,11 @@
 				<version>${spring.boot.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
-			</dependency>
+			</dependency>			
 			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter</artifactId>
-				<version>${spring.boot.version}</version>
+			    <groupId>javax.validation</groupId>
+			    <artifactId>validation-api</artifactId>
+			    <version>${bean.validation.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.google.guava</groupId>
@@ -56,22 +57,7 @@
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
 				<version>${commons.io.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-data-jpa</artifactId>
-				<version>${spring.boot.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot_starter-validation</artifactId>
-				<version>${spring.boot.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.hibernate</groupId>
-				<artifactId>hibernate-java8</artifactId>
-				<version>${hibernate.version}</version>
-			</dependency>			
+			</dependency>	
 			<dependency>
 				<groupId>com.vaadin</groupId>
 				<artifactId>vaadin-bom</artifactId>
@@ -80,13 +66,18 @@
 				<scope>import</scope>
 			</dependency>
 			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-web</artifactId>
-				<version>${spring.boot.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>com.vaadin</groupId>
 				<artifactId>vaadin-spring-boot-starter</artifactId>
+				<version>${vaadin.springboot.version}</version>
+			</dependency>			
+			<dependency>
+				<groupId>com.vaadin</groupId>
+				<artifactId>vaadin-spring</artifactId>
+				<version>${vaadin.springboot.version}</version>
+			</dependency>					
+			<dependency>
+				<groupId>com.vaadin</groupId>
+				<artifactId>vaadin-spring-boot</artifactId>
 				<version>${vaadin.springboot.version}</version>
 			</dependency>
 			<dependency>
@@ -150,9 +141,7 @@
 	</dependencyManagement>
 
 	<modules>
-		<module>values</module>
 		<module>domain</module>
-		<module>application</module>
 		<module>ui</module>
 		<module>tools</module>
 		<module>feutrainer-assembly</module>
