--- a/parent/ui/pom.xml
+++ b/parent/ui/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>de.zettsystems.feutrainer</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.4.0-SNAPSHOT</version>
+		<version>0.4.0</version>
 	</parent>
 
 	<artifactId>ui</artifactId>
@@ -22,30 +22,16 @@
 	<dependencies>
 		<dependency>
 			<groupId>de.zettsystems.feutrainer</groupId>
-			<artifactId>values</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>de.zettsystems.feutrainer</groupId>
-			<artifactId>application</artifactId>
-			<version>${project.version}</version>
-		</dependency>		
-		<dependency>
-			<groupId>de.zettsystems.feutrainer</groupId>
 			<artifactId>domain</artifactId>
 			<version>${project.version}</version>
-		</dependency>		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.vaadin</groupId>
-			<artifactId>vaadin-spring-boot-starter</artifactId>
-		</dependency>				
+			<artifactId>vaadin-spring</artifactId>
+		</dependency>	
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-validation</artifactId>
+			<groupId>com.vaadin</groupId>
+			<artifactId>vaadin-spring-boot</artifactId>
 		</dependency>
         <dependency>
             <groupId>org.vaadin.spring.extensions</groupId>
@@ -62,8 +48,7 @@
         <dependency>
             <groupId>org.vaadin.spring.addons</groupId>
             <artifactId>vaadin-spring-addon-sidebar</artifactId>
-        </dependency>
-        		
+        </dependency>        		
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
